--- a/procv.html
+++ b/procv.html
@@ -8,7 +8,7 @@
 	
 </head>
 <body>
-     <img src="c:\Users\HP\Desktop\portfolio-main\assets\img\mymy.jpg" width="100px" align="left">
+     <img src="c:.\assets\img\mymy.jpg" width="100px" align="left">
 <h1 align="center" style="color: blue">Bodunrinde F. Joseph</h1>
 <p align="center"> Address: No 23, De-Morgan road, omisanjana road, Ado Ekiti, Nigeria.<br>
  E-mail Address: bodzfunsho@gmail.com<br>
